# OOP_assignment

./: CMakeCache.txt  CMakeLists.txt  CreateFunc.cpp  CreateFunc.h  Equation_solver.cpp  Equation_solver.h  GraphCompute.cpp  GraphCompute.h  Makefile  Matrix.cpp  Matrix.h  MyComputation.cpp  MyComputation.h  MyIn.cpp  MyIn.h  Neural_network.cpp  Neural_network.h  Node.cpp  Node.h  README.md  Reshape.cpp  Scalar.cpp  Scalar.h  SessionRelated.h  Storage.cpp  Storage.h  Tensor.cpp  Tensor.h  cmake_install.cmake  debug.cpp  developer.txt  main  main.cpp  main1.cpp  main3.cpp  main4.cpp  myconst.cpp  myconst.h  node.cpp  node.h  (+6 more)
Layer/: Conv.cpp  Conv.h  Dense.cpp  Dense.h  Input.cpp  Input.h  Reshape.cpp  Reshape.h  activationfunc.cpp  activationfunc.h  criterion.cpp  criterion.h  layer.cpp  layer.h  maxpool.cpp  maxpool.h
OP_1/: myexp.cpp  myexp.h  mylog.cpp  mylog.h  myprint.cpp  mysigmoid.cpp  mysigmoid.h  mysin.cpp  mysin.h  mytanh.cpp  mytanh.h  operator_1.cpp  operator_1.h
OP_2/: mydiv.cpp  mydiv.h  myequal.cpp  myequal.h  mygreater.h  myminus.cpp  myminus.h  mymul.cpp  mymul.h  myplus.cpp  myplus.h  operator_2.cpp  operator_2.h
Operator_0/: MyConst.cpp  MyConst.h  MyPlaceholder.cpp  MyPlaceholder.h  MyVar.cpp  MyVar.h  Operator_0.cpp  Operator_0.h
Operator_1/: myassert.cpp  myassert.h  myexp.cpp  myexp.h  mygrad.cpp  mygrad.h  mylog.cpp  mylog.h  mymaxpool.cpp  mymaxpool.h  myprint.cpp  myprint.h  myrelu.cpp  myrelu.h  myreshape.cpp  myreshape.h  mysigmoid.cpp  mysigmoid.h  mysin.cpp  mysin.h  mytanh.cpp  mytanh.h  operator_1.cpp  operator_1.h
Operator_2/: myassign.cpp  myassign.h  myat.cpp  myat.h  mybind.cpp  mybind.h  myconv.cpp  myconv.h  mycriterion.cpp  mycriterion.h  mydiv.cpp  mydiv.h  myequal.cpp  myequal.h  mygreater.cpp  mygreater.h  mygreaterequal.cpp  mygreaterequal.h  myless.cpp  myless.h  mylessequal.cpp  mylessequal.h  mymatmul.cpp  mymatmul.h  myminus.cpp  myminus.h  mymul.cpp  mymul.h  myplus.cpp  myplus.h  operator_2.cpp  operator_2.h
Operator_3/: MyCond.cpp  MyCond.h  Operator_3.cpp  Operator_3.h
Utils/: Data.cpp  Data.h
readme/: 计算图说明文档.docx  计算图说明文档.md
