cmake_minimum_required(VERSION 3.13)
project(OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP main.cpp node.cpp node.h OP_1/operator_1.cpp OP_1/operator_1.h OP_2/operator_2.cpp OP_2/operator_2.h OP_2/myplus.cpp OP_2/myplus.h OP_2/myminus.cpp OP_2/myminus.h OP_2/mymul.cpp OP_2/mymul.h OP_2/mydiv.cpp OP_2/mydiv.h OP_1/mysin.cpp OP_1/mysin.h OP_1/mylog.cpp OP_1/mylog.h OP_1/myexp.cpp OP_1/myexp.h OP_1/mytanh.cpp OP_1/mytanh.h OP_1/mysigmoid.cpp OP_1/mysigmoid.h myconst.cpp myconst.h OP_2/mygreater.cpp OP_2/mygreater.h OP_2/myless.cpp OP_2/myless.h OP_2/mygreaterequal.cpp OP_2/mygreaterequal.h OP_2/mylessequal.cpp OP_2/mylessequal.h OP_2/myequal.cpp OP_2/myequal.h OP_1/myprint.cpp OP_1/myprint.h)